css/style.css
/* ... */
@font-face {
    font-family: 'brandon_grotesque_lightitalic';
    src: url('webfonts/brandon_light_it-webfont.eot');
    src: url('webfonts/brandon_light_it-webfont.eot?#iefix') format('embedded-opentype'),
         url('webfonts/brandon_light_it-webfont.woff') format('woff'),
         url('webfonts/brandon_light_it-webfont.ttf') format('truetype'),
         url('webfonts/brandon_light_it-webfont.svg#brandon_grotesque_lightitalic') format('svg');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'brandon_grotesque_lightRg';
    src: url('webfonts/brandon_light-webfont.eot');
    src: url('webfonts/brandon_light-webfont.eot?#iefix') format('embedded-opentype'),
         url('webfonts/brandon_light-webfont.woff') format('woff'),
         url('webfonts/brandon_light-webfont.ttf') format('truetype'),
         url('webfonts/brandon_light-webfont.svg#brandon_grotesque_lightRg') format('svg');
    font-weight: normal;
    font-style: normal;
}
body {
 	font-family: 'GoudyRegular', serif;
 	background-color: #27302E;
}
h1 {
	font-family: "Helvetica Neue", sans-serif;
 	letter-spacing: -1px;
 	font-size: 2.5em;
}
h2,
h3,
h4,
.footer p,
.emblem-text {
	font-family: 'brandon_grotesque_lightRg';
 	font-weight: normal;
}
.navbar .navbar-nav a{
	font-family: 'brandon_grotesque_lightRg';
 	font-weight: normal;
 	font-size: 1.75em;
}
h2 {
 	font-size: 3em;
 	line-height: 1em;
 	letter-spacing: -1px;
}
.header-labels h2 {
	font-size: 4em;
}
h3 {
	font-size: 2.5em;
	line-height: 1.25em;
}
 h4 {
 	font-size: 2em;
 	line-height: 1.25em;
 	margin-top: 6%;
 }
 h5 {
 	font-family: 'GoudyRegular', serif; /* 1 */
 	font-size: .75em;
 	line-height: 1em;
 }
 .footer p {
 	font-size: 1.6em;
 }
 img {
 	max-width: 100%;
 	height: auto;
 }
p {
	font-size: 1.25em;
 	line-height: 1.75em;
}
ul li {
    font-size: 1.15em;
}
.cta-buttons,
.contact-info address,
.contact-info p,
.jumbotron p {
	font-family: 'Helvetica Neue';
}
.cta-buttons {
	font-size: 1.5em;
}
.emblem-text {
	font-size: 2.5em;
}
.number {
	font-family: serif;
}
.qualifications hr {
	border-top: 1px solid #333;
	width: 80%;
}

/* Icon Fonts
================================ */

@font-face {
	font-family: 'icomoon';
	src:url('../fonts/icomoon.eot?-6ctp8c');
	src:url('../fonts/icomoon.eot?#iefix-6ctp8c') format('embedded-opentype'),
		url('../fonts/icomoon.woff?-6ctp8c') format('woff'),
		url('../fonts/icomoon.ttf?-6ctp8c') format('truetype'),
		url('../fonts/icomoon.svg?-6ctp8c#icomoon') format('svg');
	font-weight: normal;
	font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
	font-family: 'icomoon';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;

	/* Better Font Rendering =========== */
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}
.icon-github:after,
.icon-linkedin:after,
.icon-facebook:after,
.icon-email:after {
	font-size: 1.5em;
	color: #ddd;
	background-color: #586660;
	padding: 8px;
	border-radius: 50%;
	transition: 0.3s background-color;
}
.icon-contact:after {
	font-size: 2em;
	color: #333;
	background-color: transparent;
}
a:hover .icon-github:after,
a:hover .icon-linkedin:after,
a:hover .icon-facebook:after,
a:hover .icon-email:after {
	background-color: #728C86;
} 
a:hover .icon-contact:after {
	color: #658594;
	background-color: transparent;
}  
.icon-github:after {
	content: "\e600";
	right: 60px;
}
.icon-linkedin:after {
	content: "\e601";
	right: 120px;
}
.icon-facebook:after {
	content: "\e604";
	right: 60px;
}
.icon-email:after {
	content: "\e602";
	right: 120px;
}
.glyphicon-chevron-right,
.glyphicon-chevron-left {
	color: #27302E;
}

   
/* ==========================================================================
	Styles
   ========================================================================== */

a {
	color: #658594;
}
a:hover {
	text-decoration: none;
	color: #92C0D6;
}
.container {
	max-width: 1000px;
	padding-bottom: 40px;
}
h1,
h2,
h3,
h4,
.contact-info strong {
	color: #27302E;
}


/*Begin Navigation
==========================*/
.navbar {
	background-color: #27302E;
	-webkit-box-shadow: 0px 0px 4px 2px #948f8f;
	-moz-box-shadow: 0px 0px 4px 2px #948f8f;
	box-shadow: 0px 0px 4px 2px #948f8f;
	padding-top: 35px;
	padding-bottom: 25px;
	border-radius: 0;
}
.main-nav-home {
	background: none;
	box-shadow: none;
}
.navbar-brand {
	padding-top: 0;
	padding-left: 60px;
}
.navbar-brand h1 {
	display: inline;
	color: #feff60;
}
.navbar li {
	margin-right: 60px;
}
.navbar .navbar-nav a {
	color: #feff60;
	width: 120px;
	text-align: center;
	border-radius: 5px;
	transition: 0s background-color;
}
.navbar .navbar-nav a:hover,
.navbar-nav .on a {
	color: #343232;
	background-color: #feff60;
	transition-duration: 0.5s;
}
.navbar-toggle {
	padding: 10px;
	margin-top: 0;
	border-color: #feff60;
	border-width: 2px;
}
.navbar .navbar-toggle .icon-bar {
	background-color: #feff60;
}

 /*End Navigation 
 ===========================*/

.header-image {
	margin: auto;
	top: 0;
	position: fixed;
	z-index: -1000;
	/*padding: 0;*/
	width: 100%;
	position: relative;
}
.header-image img {
	width: 100%;
}
.header-labels {
	position: absolute;
	bottom: 12%;
	left: 10px;
}
.header-labels .glyphicon {
	font-size: 0.75em;
}
.header-labels h2 {
	margin-top: 30px;
	color: #fff;
}
.intro-block {
	margin-top: 52%;
	padding-bottom: 80px;
	background: #27302E;
	background-color: #27302E;
	-webkit-box-shadow: 0px 0px 4px 2px #27302E;
	-moz-box-shadow: 0px 0px 4px 2px #27302E;
	box-shadow: 0px 0px 4px 2px #27302E;
}
.qualification-anchor-link {
	display: block;
	width: 500px;
	height: 300px;
	margin-left: 5%;
	position: absolute;
	bottom: 5%;
	z-index: 3000;
}
.fade {
	opacity: 1;
}
.cta-buttons {
	padding-top: 80px;
	text-align: center;
	margin-top: 40px;
	margin-bottom: 80px;
}
.cta-buttons a {
	color: #feff60;
	border: thin solid #feff60;
	width: 180px;
	padding: 15px 25px;
	display: inline-block;
	border-radius: 5px;
}
/* ... */

